# FLEX-deployment

./: .gitignore  Taskfile.yaml  devbox.json  pyproject.toml
kind/: Taskfile.yaml  kind-config.yaml  kind-config.yaml.template
kubernetes/charts/fl-client/: Chart.yaml  values.yaml
kubernetes/charts/fl-client/examples/: metadata.json
kubernetes/charts/fl-client/templates/: NOTES.txt  _helpers.tpl  clientapp-deployment.yaml  pvc.yaml  supernode-deployment.yaml  supernode-service.yaml
kubernetes/demo-clients/: Taskfile.yaml
kubernetes/flex/: Taskfile.yaml
kubernetes/flex/1-namespace/: Namespace.flex.yaml
kubernetes/flex/2-serverapp/: Deployment.serverapp.yaml  Deployment.superlink.yaml  PV.trained_models.yaml  PVC.trained_models.yaml  Service.superlink.yaml
kubernetes/flex/3-postgres/: Deployment.postgres.yaml  PVC.postgres.yaml  Service.postgres.yaml
kubernetes/flex/4-db-migrate/: Job.db-migrate.yaml  Secret.flex-db.yaml  ServiceAccount.flex.yaml
kubernetes/flex/5-platform/: ConfigMap.flex.yaml  Deployment.flex-backend.yaml  Deployment.flex-frontend.yaml  Deployment.flex-http-server.yaml  Deployment.flex-log-puller.yaml  RBAC.flex.yaml  Service.flex-backend.yaml  Service.flex-frontend.yaml  Service.flex-http-server.yaml
scripts/: load_client_data.py
